# ndt

./: .travis.yml  CHANGELOG.md  Main.hs  default.nix  develop.nix  ndt.cabal  ndt.nix  shell.nix
exe/: Main.hs
lib/: Ndt.hs
lib/Ndt/: Fetch.hs  Sources.hs  Types.hs  Update.hs
static/: init-template.nix  sources-template.nix
test/: Test.hs
test/Tests/: Fetch.hs  Fixtures.hs  Sources.hs
