cabal-version:       2.2
name:                ndt
version:             0.1.0.0
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common opts
  ghc-options: -Wall
               -Werror
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints


common exts
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeSynonymInstances
                     , ViewPatterns

library
  import:              exts
                     , opts

  hs-source-dirs:      lib

  exposed-modules:     Ndt
                     , Ndt.Types
                     , Ndt.Fetch
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , directory
                     , lens-aeson
                     , microlens-platform
                     , network-uri
                     , optparse-applicative
                     , text
                     , typed-process
                     , mtl
                     , exceptions
                     , unordered-containers
  default-language:    Haskell2010

executable ndt
  import:              exts
                     , opts
  default-extensions:  NoImplicitPrelude

  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , directory
                     , lens-aeson
                     , microlens-platform
                     , ndt
                     , network-uri
                     , optparse-applicative
                     , rio >=0.1.16 && < 0.2
                     , text
                     , typed-process
                     , file-embed
  default-language:    Haskell2010

test-suite test
  import:              exts
                     , opts
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Tests.Fetch
  build-depends:       base
                     , ndt
                     , tasty
                     , tasty-hspec
                     , hspec
